--- a/OntoMaven-CL/pom.xml
+++ b/OntoMaven-CL/pom.xml
@@ -47,7 +47,7 @@
 		<dependency>
 			<groupId>org.apache.httpcomponents</groupId>
 			<artifactId>httpclient</artifactId>
-			<version>4.5.2</version>
+			<version>[4.5.13,)</version>
 		</dependency>
 		<dependency>
 			<groupId>xalan</groupId>
@@ -62,7 +62,7 @@
 		<dependency>
 			<groupId>org.apache.santuario</groupId>
 			<artifactId>xmlsec</artifactId>
-			<version>1.4.3</version>
+			<version>[2.1.7,)</version>
 		</dependency>
 		<dependency>
 			<groupId>thaiopensource</groupId>
@@ -76,9 +76,9 @@
 			<scope>test</scope>
 		</dependency>
 		<dependency>
-			<groupId>log4j</groupId>
-			<artifactId>log4j</artifactId>
-			<version>1.2.17</version>
+			<groupId>org.apache.logging.log4j</groupId>
+			<artifactId>log4j-core</artifactId>
+			<version>2.16.0</version>
 		</dependency>
 	</dependencies>
 	<build>
